# swarmDrones

./: CommonConstants.h  Makefile  NetworkNode.cpp  NetworkNode.h  SwarmHelper.cpp  SwarmHelper.h  logger.py  main.cpp  stm32.h
fwng/ap/: geo_coordinate.h  nav.h  nav_def.h  sensor_hub.h
sipp/: sipp.c  sipp.h
sipp/protocols/: armasuisse.h  demo.h  gapi.h  gyro.h  meteo.h  optipilot_proto.h
sipp/test/: CMakeLists.txt  sipp_test.cpp
